--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -156,7 +156,7 @@
     "    # Convert the centroid to EPSG:4326 (folium requires EPSG:4326)\n",
     "    centroid_epsg_4326 = centroid.to_crs(epsg=4326)\n",
     "\n",
-    "    # Compute the location of the map\n",
+    "    # Compute the location of the folium map\n",
     "    location_epsg_4326 = [\n",
     "        centroid_epsg_4326.geometry.y.mean(),\n",
     "        centroid_epsg_4326.geometry.x.mean(),\n",
@@ -395,7 +395,7 @@
     "    'weight': 2,\n",
     "}\n",
     "\n",
-    "# Add the administrative areas to the map\n",
+    "# Add the administrative areas to the folium map\n",
     "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
     "\n",
     "folium_map"
@@ -534,7 +534,7 @@
     "    'weight': 2,\n",
     "}\n",
     "\n",
-    "# Add the first process area to the map\n",
+    "# Add the first process area to the folium map\n",
     "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
     "\n",
     "# Convert the second process area to a geodataframe\n",
@@ -553,7 +553,7 @@
     "    'weight': 2,\n",
     "}\n",
     "\n",
-    "# Add the second process area to the map\n",
+    "# Add the second process area to the folium map\n",
     "folium.GeoJson(gdf_2_epsg_4326, style_function=style_function_2).add_to(folium_map)\n",
     "\n",
     "folium_map"
@@ -641,7 +641,7 @@
     "    'weight': 2,\n",
     "}\n",
     "\n",
-    "# Add the first process area to the map\n",
+    "# Add the first process area to the folium map\n",
     "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
     "\n",
     "# Convert the second process area to a geodataframe\n",
@@ -660,7 +660,7 @@
     "    'weight': 2,\n",
     "}\n",
     "\n",
-    "# Add the second process area to the map\n",
+    "# Add the second process area to the folium map\n",
     "folium.GeoJson(gdf_2_epsg_4326, style_function=style_function_2).add_to(folium_map)\n",
     "\n",
     "folium_map"
