--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -173,12 +173,11 @@
     "    )\n",
     "\n",
     "    # Define the style of the process area\n",
-    "    def style_function() -> dict:\n",
-    "        return {\n",
-    "            'fillOpacity': .2,\n",
-    "            'color': 'black',\n",
-    "            'weight': 2,\n",
-    "        }\n",
+    "    style_function = lambda feature: {\n",
+    "        'fillOpacity': .2,\n",
+    "        'color': 'black',\n",
+    "        'weight': 2,\n",
+    "    }\n",
     "\n",
     "    # Add the process area to the folium map\n",
     "    folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
@@ -390,12 +389,11 @@
     "gdf_epsg_4326 = gdf.to_crs(epsg=4326)\n",
     "\n",
     "# Define the style of the administrative areas (red)\n",
-    "def style_function() -> dict:\n",
-    "    return {\n",
-    "        'fillOpacity': 0.,\n",
-    "        'color': '#FF595E',\n",
-    "        'weight': 2,\n",
-    "    }\n",
+    "style_function = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#FF595E',\n",
+    "    'weight': 2,\n",
+    "}\n",
     "\n",
     "# Add the administrative areas to the folium map\n",
     "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
@@ -530,12 +528,11 @@
     "gdf_1_epsg_4326 = gdf_1.to_crs(epsg=4326)\n",
     "\n",
     "# Define the style of the first process area (red)\n",
-    "def style_function_1() -> dict:\n",
-    "    return {\n",
-    "        'fillOpacity': 0.,\n",
-    "        'color': '#FF595E',\n",
-    "        'weight': 2,\n",
-    "    }\n",
+    "style_function_1 = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#FF595E',\n",
+    "    'weight': 2,\n",
+    "}\n",
     "\n",
     "# Add the first process area to the folium map\n",
     "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
@@ -550,12 +547,11 @@
     "gdf_2_epsg_4326 = gdf_2.to_crs(epsg=4326)\n",
     "\n",
     "# Define the style of the second process area (blue)\n",
-    "def style_function_2() -> dict:\n",
-    "    return {\n",
-    "        'fillOpacity': 0.,\n",
-    "        'color': '#1982C4',\n",
-    "        'weight': 2,\n",
-    "    }\n",
+    "style_function_2 = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#1982C4',\n",
+    "    'weight': 2,\n",
+    "}\n",
     "\n",
     "# Add the second process area to the folium map\n",
     "folium.GeoJson(gdf_2_epsg_4326, style_function=style_function_2).add_to(folium_map)\n",
@@ -639,12 +635,11 @@
     "gdf_1_epsg_4326 = gdf_1.to_crs(epsg=4326)\n",
     "\n",
     "# Define the style of the first process area (red)\n",
-    "def style_function_1() -> dict:\n",
-    "    return {\n",
-    "        'fillOpacity': 0.,\n",
-    "        'color': '#FF595E',\n",
-    "        'weight': 2,\n",
-    "    }\n",
+    "style_function_1 = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#FF595E',\n",
+    "    'weight': 2,\n",
+    "}\n",
     "\n",
     "# Add the first process area to the folium map\n",
     "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
@@ -659,12 +654,11 @@
     "gdf_2_epsg_4326 = gdf_2.to_crs(epsg=4326)\n",
     "\n",
     "# Define the style of the second process area (blue)\n",
-    "def style_function_2() -> dict:\n",
-    "    return {\n",
-    "        'fillOpacity': 0.,\n",
-    "        'color': '#1982C4',\n",
-    "        'weight': 2,\n",
-    "    }\n",
+    "style_function_2 = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#1982C4',\n",
+    "    'weight': 2,\n",
+    "}\n",
     "\n",
     "# Add the second process area to the folium map\n",
     "folium.GeoJson(gdf_2_epsg_4326, style_function=style_function_2).add_to(folium_map)\n",
