--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -26,10 +26,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "! pip install -q geospaitial-lab-aviary",
-   "id": "b43552dec4732393"
+   "id": "b43552dec4732393",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -40,14 +40,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import aviary\n",
     "\n",
     "print(aviary.__version__)"
    ],
-   "id": "8781e75ecabd13ed"
+   "id": "8781e75ecabd13ed",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -66,14 +66,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "process_area = aviary.ProcessArea()\n",
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "de0ef6265ae6f29f"
+   "id": "de0ef6265ae6f29f",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -84,8 +84,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import numpy as np\n",
     "\n",
@@ -102,7 +100,9 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "fe9af035f47ed08e"
+   "id": "fe9af035f47ed08e",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -117,10 +117,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "! pip install -q folium",
-   "id": "b6f95ca421838484"
+   "id": "b6f95ca421838484",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -131,8 +131,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import folium\n",
     "import geopandas as gpd\n",
@@ -184,7 +182,9 @@
     "\n",
     "    return folium_map"
    ],
-   "id": "55b7909dc1a339ec"
+   "id": "55b7909dc1a339ec",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -195,14 +195,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "folium_map = visualize_process_area(process_area)\n",
     "\n",
     "folium_map"
    ],
-   "id": "8961b4b5c9338a1c"
+   "id": "8961b4b5c9338a1c",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -213,8 +213,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "coordinates = np.array(\n",
     "    [\n",
@@ -227,7 +225,9 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "5ac0801321b1dbae"
+   "id": "5ac0801321b1dbae",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -238,14 +238,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "folium_map = visualize_process_area(process_area)\n",
     "\n",
     "folium_map"
    ],
-   "id": "1eaa316b02ebf136"
+   "id": "1eaa316b02ebf136",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -260,8 +260,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "bounding_box = aviary.BoundingBox(\n",
     "    x_min=363084,\n",
@@ -277,7 +275,9 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "5d44ee55e7de3105"
+   "id": "5d44ee55e7de3105",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -288,14 +288,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "folium_map = visualize_process_area(process_area)\n",
     "\n",
     "folium_map"
    ],
-   "id": "44cb8ae128211ecd"
+   "id": "44cb8ae128211ecd",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -310,8 +310,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from shapely.geometry import box\n",
     "\n",
@@ -327,7 +325,9 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "8c4f19de246e990"
+   "id": "8c4f19de246e990",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -338,14 +338,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "folium_map = visualize_process_area(process_area)\n",
     "\n",
     "folium_map"
    ],
-   "id": "2d674153e2e62ed6"
+   "id": "2d674153e2e62ed6",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -356,10 +356,11 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "url = 'TODO'\n",
+    "url = (\n",
+    "    'https://raw.githubusercontent.com/geospaitial-lab/aviary/main'\n",
+    "    '/docs/how_to_guides/api/notebooks/administrative_areas.geojson'\n",
+    ")\n",
     "gdf = gpd.read_file(url)\n",
     "process_area = process_area.from_gdf(\n",
     "    gdf=gdf,\n",
@@ -369,7 +370,9 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "a8a2242ca24ffdb0"
+   "id": "a8a2242ca24ffdb0",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -380,8 +383,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "folium_map = visualize_process_area(process_area)\n",
     "\n",
@@ -400,7 +401,9 @@
     "\n",
     "folium_map"
    ],
-   "id": "b20e1aeda794b8ea"
+   "id": "b20e1aeda794b8ea",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -415,8 +418,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "json_string = (\n",
     "    '[[363084, 5715326], '\n",
@@ -428,7 +429,9 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "d2507f7a73d87f71"
+   "id": "d2507f7a73d87f71",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -439,14 +442,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "folium_map = visualize_process_area(process_area)\n",
     "\n",
     "folium_map"
    ],
-   "id": "378f1d7212d507a5"
+   "id": "378f1d7212d507a5",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -462,8 +465,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "coordinates_1 = np.array(\n",
     "    [\n",
@@ -490,19 +491,21 @@
     "print(process_area_1.coordinates)\n",
     "print(process_area_2.coordinates)"
    ],
-   "id": "157a81a8b5b11807"
+   "id": "157a81a8b5b11807",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "process_area = process_area_1 + process_area_2\n",
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "b22a5f6468f546f0"
+   "id": "b22a5f6468f546f0",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -513,8 +516,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "folium_map = visualize_process_area(process_area)\n",
     "\n",
@@ -558,7 +559,9 @@
     "\n",
     "folium_map"
    ],
-   "id": "ed31cf05b9b2da24"
+   "id": "ed31cf05b9b2da24",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -569,8 +572,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "coordinates_1 = np.array(\n",
     "    [\n",
@@ -597,19 +598,21 @@
     "print(process_area_1.coordinates)\n",
     "print(process_area_2.coordinates)"
    ],
-   "id": "ca719ef56ee88ac5"
+   "id": "ca719ef56ee88ac5",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "process_area = process_area_1 - process_area_2\n",
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "b429ca09d4a1f1cc"
+   "id": "b429ca09d4a1f1cc",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -620,8 +623,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "folium_map = visualize_process_area(process_area)\n",
     "\n",
@@ -665,7 +666,9 @@
     "\n",
     "folium_map"
    ],
-   "id": "872fcf7e84aea7f4"
+   "id": "872fcf7e84aea7f4",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -680,8 +683,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "coordinates = np.array(\n",
     "    [\n",
@@ -696,19 +697,21 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "804de31ca2385cbf"
+   "id": "804de31ca2385cbf",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "process_area = process_area.append((363340, 5715582))\n",
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "e4d0473d3d45a8b7"
+   "id": "e4d0473d3d45a8b7",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -719,14 +722,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "folium_map = visualize_process_area(process_area)\n",
     "\n",
     "folium_map"
    ],
-   "id": "a40afd93fd368538"
+   "id": "a40afd93fd368538",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -737,14 +740,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "process_area = process_area.append((363340, 5715582))\n",
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "c97b62efadccbbf1"
+   "id": "c97b62efadccbbf1",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -760,8 +763,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "coordinates = np.array(\n",
     "    [\n",
@@ -776,20 +777,22 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "484b23275dee2fab"
+   "id": "484b23275dee2fab",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "process_areas = process_area.chunk(num_chunks=2)\n",
     "\n",
     "for process_area in process_areas:\n",
     "    print(process_area.coordinates)"
    ],
-   "id": "8bd6a5095eaa719a"
+   "id": "8bd6a5095eaa719a",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -814,8 +817,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "coordinates = np.array(\n",
     "    [\n",
@@ -830,13 +831,13 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "dad9f0cf20fff808"
+   "id": "dad9f0cf20fff808",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "gdf = process_area.to_gdf(\n",
     "    epsg_code=25832,\n",
@@ -845,7 +846,9 @@
     "\n",
     "print(gdf)"
    ],
-   "id": "c773a0c07ab1e2c5"
+   "id": "c773a0c07ab1e2c5",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -860,8 +863,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "coordinates = np.array(\n",
     "    [\n",
@@ -876,19 +877,21 @@
     "\n",
     "print(process_area.coordinates)"
    ],
-   "id": "cc20fe734b11c9c7"
+   "id": "cc20fe734b11c9c7",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "json_string = process_area.to_json()\n",
     "\n",
     "print(json_string)"
    ],
-   "id": "ad9238e05c85e827"
+   "id": "ad9238e05c85e827",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
