--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -138,11 +138,12 @@
     "\n",
     "def visualize_process_area(\n",
     "    process_area: aviary.ProcessArea,\n",
+    "    tile_size: int,\n",
     ") -> folium.Map:\n",
     "    # Convert the process area to a geodataframe\n",
     "    gdf = process_area.to_gdf(\n",
     "        epsg_code=25832,\n",
-    "        tile_size=128,\n",
+    "        tile_size=tile_size,\n",
     "    )\n",
     "\n",
     "    # Compute the centroid of the process area\n",
@@ -196,7 +197,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "folium_map = visualize_process_area(process_area)\n",
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
     "\n",
     "folium_map"
    ],
@@ -239,7 +243,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "folium_map = visualize_process_area(process_area)\n",
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
     "\n",
     "folium_map"
    ],
@@ -289,7 +296,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "folium_map = visualize_process_area(process_area)\n",
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
     "\n",
     "folium_map"
    ],
@@ -339,7 +349,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "folium_map = visualize_process_area(process_area)\n",
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
     "\n",
     "folium_map"
    ],
@@ -384,7 +397,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "folium_map = visualize_process_area(process_area)\n",
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
     "\n",
     "# Convert the administrative areas to EPSG:4326 (folium requires EPSG:4326)\n",
     "gdf_epsg_4326 = gdf.to_crs(epsg=4326)\n",
@@ -443,7 +459,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "folium_map = visualize_process_area(process_area)\n",
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
     "\n",
     "folium_map"
    ],
@@ -517,7 +536,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "folium_map = visualize_process_area(process_area)\n",
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
     "\n",
     "# Convert the first process area to a geodataframe\n",
     "gdf_1 = process_area_1.to_gdf(\n",
@@ -624,7 +646,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "folium_map = visualize_process_area(process_area)\n",
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
     "\n",
     "# Convert the first process area to a geodataframe\n",
     "gdf_1 = process_area_1.to_gdf(\n",
@@ -723,7 +748,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "folium_map = visualize_process_area(process_area)\n",
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
     "\n",
     "folium_map"
    ],
