--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -274,7 +274,7 @@
     "    x_max=363340,\n",
     "    y_max=5715582,\n",
     ")\n",
-    "process_area = process_area.from_bounding_box(\n",
+    "process_area = aviary.ProcessArea.from_bounding_box(\n",
     "    bounding_box=bounding_box,\n",
     "    tile_size=128,\n",
     "    quantize=False,\n",
@@ -327,7 +327,7 @@
     "    geometry=[box(363084, 5715326, 363340, 5715582)],\n",
     "    crs='EPSG:25832',\n",
     ")\n",
-    "process_area = process_area.from_gdf(\n",
+    "process_area = aviary.ProcessArea.from_gdf(\n",
     "    gdf=gdf,\n",
     "    tile_size=128,\n",
     "    quantize=False,\n",
@@ -375,7 +375,7 @@
     "    '/docs/how_to_guides/api/notebooks/administrative_areas.geojson'\n",
     ")\n",
     "gdf = gpd.read_file(url)\n",
-    "process_area = process_area.from_gdf(\n",
+    "process_area = aviary.ProcessArea.from_gdf(\n",
     "    gdf=gdf,\n",
     "    tile_size=128,\n",
     "    quantize=True,\n",
@@ -441,7 +441,7 @@
     "    '[363084, 5715454], '\n",
     "    '[363212, 5715454]]'\n",
     ")\n",
-    "process_area = process_area.from_json(json_string=json_string)\n",
+    "process_area = aviary.ProcessArea.from_json(json_string=json_string)\n",
     "\n",
     "print(process_area.coordinates)"
    ],
