visualize bounding box

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -301,6 +301,22 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
+    "# Convert the bounding box to a geodataframe\n",
+    "gdf = bounding_box.to_gdf(epsg_code=25832)\n",
+    "\n",
+    "# Convert the bounding box to EPSG:4326 (folium requires EPSG:4326)\n",
+    "gdf_epsg_4326 = gdf.to_crs(epsg=4326)\n",
+    "\n",
+    "# Define the style of the bounding box (red)\n",
+    "style_function = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#FF595E',\n",
+    "    'weight': 2,\n",
+    "}\n",
+    "\n",
+    "# Add the bounding box to the folium map\n",
+    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "\n",
     "folium_map"
    ],
    "id": "44cb8ae128211ecd",
