--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -395,6 +395,75 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "You can quantize the process area with the `quantize` parameter.<br />\n",
+    "If the coordinates are not divisible by the tile size, the coordinates will be quantized to the tile size.<br />\n",
+    "This might be useful when you want to ensure matching tiles for different process areas."
+   ],
+   "id": "23918ef1c9d41a58"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "bounding_box = aviary.BoundingBox(\n",
+    "    x_min=363084,\n",
+    "    y_min=5715326,\n",
+    "    x_max=363340,\n",
+    "    y_max=5715582,\n",
+    ")\n",
+    "process_area = aviary.ProcessArea.from_bounding_box(\n",
+    "    bounding_box=bounding_box,\n",
+    "    tile_size=128,\n",
+    "    quantize=True,\n",
+    ")\n",
+    "\n",
+    "print(process_area.coordinates)"
+   ],
+   "id": "eca0a983cb51523c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Visualize the process area.",
+   "id": "d75725d72cb18b5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
+    "\n",
+    "# Convert the bounding box to a geodataframe\n",
+    "gdf = bounding_box.to_gdf(epsg_code=25832)\n",
+    "\n",
+    "# Convert the bounding box to EPSG:4326 (folium requires EPSG:4326)\n",
+    "gdf_epsg_4326 = gdf.to_crs(epsg=4326)\n",
+    "\n",
+    "# Define the style of the bounding box (red)\n",
+    "style_function = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#FF595E',\n",
+    "    'weight': 2,\n",
+    "}\n",
+    "\n",
+    "# Add the bounding box to the folium map\n",
+    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "\n",
+    "folium_map"
+   ],
+   "id": "41f8927c25588b53",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## Create a process area from a geodataframe\n",
     "\n",
     "You can create a process area from a geodataframe with the `from_gdf` class method."
