replace administrative areas with districts

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -516,7 +516,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "The geodataframe may contain multiple polygons, e.g. the administrative areas of Gelsenkirchen and Recklinghausen.",
+   "source": "The geodataframe may contain multiple polygons, e.g. the northern districts of Gelsenkirchen.",
    "id": "d211d0912c1deb84"
   },
   {
@@ -525,7 +525,7 @@
    "source": [
     "url = (\n",
     "    'https://raw.githubusercontent.com/geospaitial-lab/aviary/main'\n",
-    "    '/docs/how_to_guides/api/notebooks/administrative_areas.geojson'\n",
+    "    '/docs/how_to_guides/api/data/districts.geojson'\n",
     ")\n",
     "gdf = gpd.read_file(url)\n",
     "process_area = aviary.ProcessArea.from_gdf(\n",
@@ -555,17 +555,17 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
-    "# Convert the administrative areas to EPSG:4326 (folium requires EPSG:4326)\n",
+    "# Convert the districts to EPSG:4326 (folium requires EPSG:4326)\n",
     "gdf_epsg_4326 = gdf.to_crs(epsg=4326)\n",
     "\n",
-    "# Define the style of the administrative areas (red)\n",
+    "# Define the style of the districts (red)\n",
     "style_function = lambda feature: {\n",
     "    'fillOpacity': 0.,\n",
     "    'color': '#FF595E',\n",
     "    'weight': 2,\n",
     "}\n",
     "\n",
-    "# Add the administrative areas to the folium map\n",
+    "# Add the districts to the folium map\n",
     "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
     "\n",
     "folium_map"
