--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# How to use the process area\n",
     "\n",
-    "Follow along this step-by-step guide to learn about the [ProcessArea](https://geospaitial-lab.github.io/aviary/api_reference/process_area) class.\n",
+    "Follow along this step-by-step guide to learn about the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area) class.\n",
     "\n",
     "To avoid any issues, run the cells in order and don't skip any cells.<br />\n",
     "If something seems off, just restart the runtime and run the cells again."
@@ -57,7 +57,7 @@
     "\n",
     "A process area specifies the area of interest by a set of coordinates of the bottom left corner of each tile.\n",
     "\n",
-    "By default, a new instance of the `ProcessArea` class has no coordinates.<br />\n",
+    "By default, a new instance of the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area) class has no coordinates.<br />\n",
     "You can access the coordinates of the process area with the `coordinates` attribute,\n",
     "which is a numpy array of shape (n, 2) and data type int32."
    ],
@@ -78,7 +78,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "If you already have the coordinates, you can pass them to the initializer of the `ProcessArea` class.",
+   "source": "If you already have the coordinates, you can pass them to the initializer of the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area) class.",
    "id": "16d060b89fb78989"
   },
   {
@@ -260,7 +260,7 @@
    "source": [
     "## Create a process area from a bounding box\n",
     "\n",
-    "You can create a process area from a bounding box with the `from_bounding_box` class method."
+    "You can create a process area from a bounding box with the [`from_bounding_box`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_bounding_box) class method."
    ],
    "id": "3a72ff5a5430dc"
   },
@@ -466,7 +466,7 @@
    "source": [
     "## Create a process area from a geodataframe\n",
     "\n",
-    "You can create a process area from a geodataframe with the `from_gdf` class method."
+    "You can create a process area from a geodataframe with the [`from_gdf`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_gdf) class method."
    ],
    "id": "a52abfcf9dec6030"
   },
@@ -580,7 +580,7 @@
    "source": [
     "## Create a process area from a json string\n",
     "\n",
-    "You can create a process area from a json string with the `from_json` class method."
+    "You can create a process area from a json string with the [`from_json`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_json) class method."
    ],
    "id": "21e8b950efe9c6d"
   },
@@ -854,7 +854,7 @@
    "source": [
     "# Append coordinates to the process area\n",
     "\n",
-    "You can append coordinates to the process area with the `append` method."
+    "You can append coordinates to the process area with the [`append`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.append) method."
    ],
    "id": "b6c9805f5c68d279"
   },
@@ -936,7 +936,7 @@
    "source": [
     "# Chunk the process area\n",
     "\n",
-    "You can chunk the process area into multiple process areas with the `chunk` method.<br />\n",
+    "You can chunk the process area into multiple process areas with the [`chunk`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.chunk) method.<br />\n",
     "This might be useful when you want to run multiple pipelines in distributed environments."
    ],
    "id": "ac7228934831283f"
@@ -991,7 +991,7 @@
    "source": [
     "# Convert the process area to a geodataframe\n",
     "\n",
-    "You can convert the process area to a geodataframe with the `to_gdf` method."
+    "You can convert the process area to a geodataframe with the [`to_gdf`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_gdf) method."
    ],
    "id": "db013e19b176171f"
   },
@@ -1037,7 +1037,7 @@
    "source": [
     "# Convert the process area to a json string\n",
     "\n",
-    "You can convert the process area to a json string with the `to_json` method."
+    "You can convert the process area to a json string with the [`to_json`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_json) method."
    ],
    "id": "d3b3284cf59aaf4d"
   },
