add filter example

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -981,9 +981,181 @@
    "source": [
     "# Filter the process area\n",
     "\n",
-    "TODO"
+    "You can filter the process area with the\n",
+    "[`filter`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.filter) method.<br />\n",
+    "This method applies a\n",
+    "[`CoordinatesFilter`](https://geospaitial-lab.github.io/aviary/api_reference/geodata/coordinates_filter/coordinates_filter)\n",
+    "to the coordinates of the process area.\n",
+    "\n",
+    "In this example, we filter the process area based on geospatial data with the\n",
+    "[`GeospatialFilter`](https://geospaitial-lab.github.io/aviary/api_reference/geodata/coordinates_filter/geospatial_filter).\n",
+    "You can remove coordinates of tiles that are within the polygons in the geodataframe with the difference mode."
    ],
    "id": "77a1ae2f99bea63c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "coordinates = np.array(\n",
+    "    [\n",
+    "        [363084, 5715326],\n",
+    "        [363212, 5715326],\n",
+    "        [363084, 5715454],\n",
+    "        [363212, 5715454],\n",
+    "    ],\n",
+    "    dtype=np.int32,\n",
+    ")\n",
+    "process_area = aviary.ProcessArea(coordinates=coordinates)\n",
+    "\n",
+    "gdf = gpd.GeoDataFrame(\n",
+    "    geometry=[box(363212, 5715454, 363468, 5715710)],\n",
+    "    crs='EPSG:25832',\n",
+    ")\n",
+    "\n",
+    "print(process_area.coordinates)\n",
+    "print(gdf)"
+   ],
+   "id": "27ad15bc472555a0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from aviary.geodata import GeospatialFilter\n",
+    "\n",
+    "geospatial_filter = GeospatialFilter(\n",
+    "    tile_size=128,\n",
+    "    gdf=gdf,\n",
+    "    mode=aviary.GeospatialFilterMode.DIFFERENCE,\n",
+    ")\n",
+    "process_area = process_area.filter(coordinates_filter=geospatial_filter)\n",
+    "\n",
+    "print(process_area.coordinates)"
+   ],
+   "id": "1230031d05db5f54",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Visualize the process area.",
+   "id": "efead8e2ef22e412"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
+    "\n",
+    "# Convert the geodataframe to EPSG:4326 (folium requires EPSG:4326)\n",
+    "gdf_epsg_4326 = gdf.to_crs(epsg=4326)\n",
+    "\n",
+    "# Define the style of the geodataframe (red)\n",
+    "style_function = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#FF595E',\n",
+    "    'weight': 2,\n",
+    "}\n",
+    "\n",
+    "# Add the geodataframe to the folium map\n",
+    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "\n",
+    "folium_map"
+   ],
+   "id": "e61367378420c9c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "You can remove coordinates of tiles that don't intersect with the polygons in the geodataframe with the intersection mode.",
+   "id": "daa88ba806a4e418"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "coordinates = np.array(\n",
+    "    [\n",
+    "        [363084, 5715326],\n",
+    "        [363212, 5715326],\n",
+    "        [363084, 5715454],\n",
+    "        [363212, 5715454],\n",
+    "    ],\n",
+    "    dtype=np.int32,\n",
+    ")\n",
+    "process_area = aviary.ProcessArea(coordinates=coordinates)\n",
+    "\n",
+    "gdf = gpd.GeoDataFrame(\n",
+    "    geometry=[box(363212, 5715454, 363468, 5715710)],\n",
+    "    crs='EPSG:25832',\n",
+    ")\n",
+    "\n",
+    "print(process_area.coordinates)\n",
+    "print(gdf)"
+   ],
+   "id": "100696ed47aa9c38",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "geospatial_filter = GeospatialFilter(\n",
+    "    tile_size=128,\n",
+    "    gdf=gdf,\n",
+    "    mode=aviary.GeospatialFilterMode.INTERSECTION,\n",
+    ")\n",
+    "process_area = process_area.filter(coordinates_filter=geospatial_filter)\n",
+    "\n",
+    "print(process_area.coordinates)"
+   ],
+   "id": "539ca36473a96889",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Visualize the process area.",
+   "id": "42951be99b2e2b36"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
+    "\n",
+    "# Convert the geodataframe to EPSG:4326 (folium requires EPSG:4326)\n",
+    "gdf_epsg_4326 = gdf.to_crs(epsg=4326)\n",
+    "\n",
+    "# Define the style of the geodataframe (red)\n",
+    "style_function = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#FF595E',\n",
+    "    'weight': 2,\n",
+    "}\n",
+    "\n",
+    "# Add the geodataframe to the folium map\n",
+    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "\n",
+    "folium_map"
+   ],
+   "id": "71f5c327be83c6fc",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
