--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -507,6 +507,19 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
+    "# Convert the geodataframe to EPSG:4326 (folium requires EPSG:4326)\n",
+    "gdf_epsg_4326 = gdf.to_crs(epsg=4326)\n",
+    "\n",
+    "# Define the style of the geodataframe (red)\n",
+    "style_function = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#FF595E',\n",
+    "    'weight': 2,\n",
+    "}\n",
+    "\n",
+    "# Add the geodataframe to the folium map\n",
+    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "\n",
     "folium_map"
    ],
    "id": "2d674153e2e62ed6",
